# adventofcode

./: .gitignore  README.md
2020/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  test_day4.py  test_day6.py
2020/day1/: day1.py
2020/day10/: day10.cpp  day10.go
2020/day11/: day11.go
2020/day2/: day2.py
2020/day3/: day3.py
2020/day4/: day4.py
2020/day5/: day5.py
2020/day6/: day6.py
2020/day7/: day7.py
2020/day8/: day8.py
2020/day9/: day9.go
2021/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  15_networkx.py  15_tmp.py  16.py  16_input_example.txt  17.py  18.py  19.py  2.py  20.py  21.py  22.py  22p2.py  23.py  23_input.txt  25.py  3.py  4.py  5.py  5_input_test_1.txt  6.py  7.py  8.py  9.py  common.py  d24.py  test_d24.py  tmp.py
2022/1/: 1.py
2022/10/: 10.py
2022/11/: 11.py
2022/12/: 12.py
2022/13/: 13.py
2022/14/: 14.py
2022/15/: 15.py
2022/16/: 16.py
2022/17/: 17.py
2022/18/: 18.py
2022/19/: 19.py
2022/2/: day2.py
2022/20/: 20.py
2022/21/: 21.py
2022/22/: 22.py
2022/23/: 23.py
2022/25/: 25.py
2022/3/: 3.py
2022/4/: 4.py
2022/5/: 5.py
2022/6/: 6.py
2022/7/: 7.py
2022/8/: 8.py
2022/9/: 9.py
2023/: conda_env.yml  setup_day.ps1  template.py  tmp.py
2023/1/: 1.py
2023/2/: 2.py
2023/5/: 5.py
2023/6/: 6.py
2023/7/: 7p1.py  7p2.py
2023/8/: day8.p1.py  day8.p1py  day8p2.py
2023/day10/: day10 ray_cast_attempt.py  day10.py  example
2023/day11/: day11.py
2023/day12/: day12.py  day12_recursive.py  day12_try.py
2023/day13/: day13.py
2023/day14/: day14.py
2023/day15/: day15.py
2023/day16/: day16.py
2023/day17/: day17 extra state.py  day17.py  day17dfs.py  day17p1.py  day17p2.py
2023/day18/: day18p1.py  day18p2.py
2023/day19/: day19.py
2023/day2/: day2.py
2023/day20/: day20.py
2023/day21/: day21.py
2023/day22/: day22.py
2023/day3/: day3.py
2023/day4/: day4.py
2023/day6/: day6.py
2023/day7/: day7p1.py  day7p2.py
2023/day9/: day9.py
2024/: conda_env.yml  setup_day.ps1  template.py
2024/day1/: day1.py
2024/day10/: day10.py
2024/day11/: day11.py
2024/day12/: day12.py
2024/day13/: day13.py
2024/day14/: day14.py
2024/day15/: day15.py
2024/day16/: day16.py
2024/day17/: day17.py
2024/day18/: day18.py
2024/day19/: day19.py
2024/day2/: day2.py
2025/: benchmark.ps1  setup_day.ps1  template.py
2025/day05/cpp/: CMakeLists.txt  day05.cpp
2025/day08/cpp/: .clang-format  CMakeLists.txt  day08.cpp  string_utils.h  union_find.h
(+58 files in other folders)
